hphp/hack/test/typecheck/new_inference/untypeable/closure.php.exp
File "closure.php", line 25, characters 17-18:
Invalid argument (Typing[4110])
  File "closure.php", line 18, characters 24-29:
  This is a string
  File "closure.php", line 20, characters 15-17:
  It is incompatible with an int
